--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr-BE">
   <head>
     <meta charset="utf-8" />
@@ -21,7 +21,7 @@
           <span id="counter">0 / 5000</span>
         </div>
         <button id="submit">Sauvegarder cette idée</button>
-        <button class="secondary" id="show-list">Consulter</button>
+        <button class="secondary" id="show-list">Liste des idées</button>
         <p class="error" id="form-error" aria-live="polite"></p>
       </section>
 
